@@ -64,30 +64,29 @@ sub _table
     my @tableDesc = 
         ( 
 
-	   new EBox::Types::Select(
-		 fieldName => 'contentFilterThreshold',
-
-		 printableName => __('Threshold'),
-
-		 editable => 1,
-		 defaultValue  => 0,
-		 populate => \&_populateContentFilterThreshold ,
-	   ), 
+         new EBox::Types::Select(
+             fieldName => 'contentFilterThreshold',
+             printableName => __('Threshold'),
+             editable => 1,
+             defaultValue  => 0,
+             populate => \&_populateContentFilterThreshold ,
+             help     => _thresholdHelp(),
+             ), 
 
 
         );
 
-      my $dataForm = {
-                      tableName          => 'ContentFilterThreshold',
-                      printableTableName => __('Content filter threshold'),
-		      modelDomain        => 'Squid',
-                      defaultActions     => [ 'editField', 'changeView' ],
-                      tableDescription   => \@tableDesc,
-                      class              => 'dataForm',
-		      messages           => {
-			    update => __('Content filter threshold changed'),
-			   },
-                     };
+    my $dataForm = {
+        tableName          => 'ContentFilterThreshold',
+        printableTableName => __('Content filter threshold'),
+        modelDomain        => 'Squid',
+        defaultActions     => [ 'editField', 'changeView' ],
+        tableDescription   => \@tableDesc,
+        class              => 'dataForm',
+        messages           => {
+            update => __('Content filter threshold changed'),
+        },
+    };
 
 
 
@@ -99,18 +98,21 @@ sub _table
 
 sub _populateContentFilterThreshold
   {
-    return [
-	    { value => 0, printableValue => __('Disabled'),  },
-	    { value => 200, printableValue => __('Very permissive'),  },
-	    { value => 160, printableValue => __('Permissive'),  },
-	    { value => 120, printableValue => __('Medium'),  },
-	    { value => 80, printableValue => __('Strict'),  },
-	    { value => 50, printableValue => __('Very strict'),  },
-	   ];
+      return [
+      { value => 0, printableValue => __('Disabled'),  },
+      { value => 200, printableValue => __('Very permissive'),  },
+      { value => 160, printableValue => __('Permissive'),  },
+      { value => 120, printableValue => __('Medium'),  },
+      { value => 80, printableValue => __('Strict'),  },
+      { value => 50, printableValue => __('Very strict'),  },
+      ];
 
   }
 
-
+sub _thresholdHelp
+{
+    return __('This specifies how strict the content filter is.');
+}
 
 
 
